// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AtAccordion should render default AtAccordion 1`] = `
<view
  class="at-accordion"
>
  <view
    class="at-accordion__header"
  >
    <!--v-if-->
    <view
      class="at-accordion__info"
    >
      <view
        class="at-accordion__info__title"
      />
      <view
        class="at-accordion__info__note"
      />
    </view>
    <view
      class="at-accordion__arrow"
    >
      <text
        class="at-icon at-icon-chevron-down"
      />
    </view>
  </view>
  <view
    class="at-accordion__content at-accordion__content--inactive"
  >
    <view
      class="at-accordion__body"
      id="content"
    >
      
      按钮
      
    </view>
  </view>
</view>
`;

exports[`AtAccordion should render prop icon  1`] = `
<text
  class="at-accordion__icon at-icon at-icon-chevron-down"
/>
`;

exports[`AtAccordion should render prop icon with color 1`] = `
<text
  class="at-accordion__icon at-icon at-icon-chevron-down"
  style="color: red;"
/>
`;

exports[`AtAccordion should render prop icon with prefixClass 1`] = `
<text
  class="at-accordion__icon prefix-class prefix-class-star"
/>
`;

exports[`AtAccordion should render prop icon with size 1`] = `
<text
  class="at-accordion__icon at-icon at-icon-chevron-down"
  style="font-size: 10px;"
/>
`;

exports[`AtAccordion should render prop note 1`] = `
<view
  class="at-accordion__info"
>
  <view
    class="at-accordion__info__title"
  />
  <view
    class="at-accordion__info__note"
  >
    note
  </view>
</view>
`;

exports[`AtAccordion should render prop title 1`] = `
<view
  class="at-accordion__info"
>
  <view
    class="at-accordion__info__title"
  >
    title
  </view>
  <view
    class="at-accordion__info__note"
  />
</view>
`;
